--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <header>
         <nav class="navbar nav__bar d-flex justify-content-evenly navbar-expand-lg">
             <div class="container-fluid nav__bar">
+                <div class="logo_btn">
                 <div class="nav__logo">
                     <img src="images/Group 2.svg" alt="Santana Photographer logo" />
                 </div>
@@ -32,6 +33,7 @@
                         <span class="toggler-icon middle-bar"></span>
                         <span class="toggler-icon bottom-bar"></span>
                   </button>
+                </div>
                 <div class="nav__links__container collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav nav__links">
                         <li class="nav-item nav__li">
